[Improvement] Added drag to reorder accounts in preferences screen. [Improvement] About... now shows server information [Known Issue] Random all songs is broken with 3.5.4, added message.  Requested API updates to ampache server.

--- a/src/app/views/mainmenu/mainmenu-scene.html
+++ b/src/app/views/mainmenu/mainmenu-scene.html
@@ -4,11 +4,13 @@
             <div id='now-playing-button' class="now-playing-button" x-mojo-tap-highlight="immediate">
                 <div class="now-playing-wrapper">
                     <span x-mojo-loc=''>Now Playing</span>
+                    
                 </div>
             </div>
+           
             <div class='header-body'>
                 <div class='icon'><img class="icon-img" src='images/icons/ampache.png'/></div>
-                <div class="scene-title truncating-text" id="title" x-mojo-loc=''>Ampache Music Server</div>
+                <div class="scene-title truncating-text mainmenu-title" id="title" x-mojo-loc=''>Ampache Music Server</div>
             </div>
         </div>
     </div>
@@ -35,4 +37,9 @@
     <div class="palm-divider solid">
     </div>
     <div id="mainMenuList" class="mainMenuList" x-mojo-element="List"></div>
+    
+     <div class="ampache-version">
+                <span id="ampache-version" x-mojo-loc=''></span>
+     </div>
+    
 </div>
