Bug Fix: Hold single song to play/enqueue, broke with jslint changes Bug Fix: Enqueueing the same song more than once broke the playlist Improvement: Optimizations to now playing list

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1018,3 +1018,10 @@ margin-left:10px;
         position:absolute;
         left:55px;
 }
+
+#playback-display
+{
+        position:fixed;
+        left:0px;
+        top:50px;
+}
