--- a/src/app/views/artists/divider.html
+++ b/src/app/views/artists/divider.html
@@ -1,3 +1,5 @@
-<div class="palm-divider alpha">
-  <div>#{dividerLabel}</div>
+<div class="palm-divider solid extend-alpha">
+<div class="palm-divider alpha extended-alpha">
+   <div>#{dividerLabel}</div>
+ </div>
 </div>
