--- a/src/app/views/background/background-scene.html
+++ b/src/app/views/background/background-scene.html
@@ -17,6 +17,8 @@
     </div>
 </div>
 <div id="image-container" style="display: none;">
+     <div class="random-album-spinner arrow-left "><img src="images/right.png"/></div>
+    <div class="random-album-spinner arrow-right"><img src="images/left.png"/></div>
     <div id="myPhotoDiv" x-mojo-element="ImageView" ></div>
     <div x-mojo-element="Button" id="btnChooseWallpaperImage" class="buttonClass"></div>
 </div>
