--- a/trunk/src/app/views/account/account-scene.html
+++ b/trunk/src/app/views/account/account-scene.html
@@ -1,7 +1,12 @@
 <div id="main" class="palm-hasheader">
-    <div class="palm-header left" id="main-hdr">
-        <div call="icon"></div>Account Editor
-    </div><!-- Incoming Mail Server -->
+    <div id="header" class="palm-header left truncating-text">
+        <div class="palm-header-wrapper">
+            <div class='header-body'>
+                <div class='icon'><img class="icon-img" src='images/icons/accounts.png'/></div>
+                <div class="scene-title truncating-text" id="title" x-mojo-loc=''>Account Editor</div>
+            </div>
+        </div>
+    </div>
 
     <div class="palm-group">
         <div class="palm-group-title" x-mojo-loc=''>
@@ -75,10 +80,10 @@
                 <div class="palm-row-wrapper">
                     <table class="palm-list-section-label">
                         <tr>
-                            <td><span class="palm-text-wrapper" x-mojo-loc="">Artist Albums Art</span></td>
+                             <td width=85%><span class="palm-text-wrapper" x-mojo-loc="">Artist Albums Art</span></td>
 
-                            <td>
-                                <div id="art-toggle" x-mojo-element="ToggleButton" class="toggle-text"></div>
+                             <td width=15%>
+                                <div id="art-toggle" x-mojo-element="ToggleButton" class="toggle-text pref-toggle"></div>
                             </td>
                         </tr>
                     </table>
@@ -89,10 +94,10 @@
                 <div class="palm-row-wrapper">
                     <table class="palm-list-section-label">
                         <tr>
-                            <td><span class="palm-text-wrapper" x-mojo-loc="">Stall Recovery</span></td>
+                            <td width=85%><span class="palm-text-wrapper" x-mojo-loc="">Stall Recovery</span></td>
 
-                            <td>
-                                <div id="stall-toggle" x-mojo-element="ToggleButton" class="toggle-text"></div>
+                            <td width=15%>
+                                <div id="stall-toggle" x-mojo-element="ToggleButton" class="toggle-text pref-toggle"></div>
                             </td>
                         </tr>
                     </table>
