--- a/trunk/src/app/views/connection/connection-scene.html
+++ b/trunk/src/app/views/connection/connection-scene.html
@@ -1,6 +1,11 @@
 <div id="ampache-main" class="palm-hasheader palm-dark ">
-    <div class="palm-header center" id="main-hdr">
-        Connect to Server
+    <div id="header" class="palm-header left truncating-text">
+        <div class="palm-header-wrapper">
+            <div class='header-body'>
+                <div class='icon'><img class="icon-img" src='images/icons/network-lan.png'/></div>
+                <div class="scene-title truncating-text" id="title" x-mojo-loc=''>Ampache Servers</div>
+            </div>
+        </div>
     </div>
     
     <div id="spacerDiv" class="music-header-spacer"></div>
