--- a/trunk/src/app/views/preferences/preferences-scene.html
+++ b/trunk/src/app/views/preferences/preferences-scene.html
@@ -1,8 +1,15 @@
 <div id="main" class="palm-hasheader preferences">
-    <div class="palm-header left" id="main-hdr">
-        <div call="icon"></div>
-        Ampache Mobile Preferences
-    </div>
+     <div id="header" class="palm-header left truncating-text">
+        <div class="palm-header-wrapper">
+            <div class='header-body'>
+                <div class='icon'><img class="icon-img" src='images/icons/settings.png'/></div>
+                <div class="scene-title truncating-text" id="title" x-mojo-loc=''>Ampache Mobile Preferences</div>
+            </div>
+        </div>
+    </div>  
+    
+    
+    
     <div class="palm-group">
         <div class="palm-group-title">Startup Account</div>
         <div class="palm-list">
@@ -24,11 +31,11 @@
                 <div class="palm-row-wrapper">
                     <table class="palm-list-section-label">
                         <tr>
-                            <td >
+                             <td width=85%>
                                 <span class="palm-text-wrapper" x-mojo-loc="">Stream Debug</span>
                             </td>
-                            <td>
-                                <div id="stream-debug-toggle" x-mojo-element="ToggleButton" class="toggle-text"></div>
+                             <td width=15%>
+                                <div id="stream-debug-toggle" x-mojo-element="ToggleButton" class="toggle-text pref-toggle"></div>
                             </td>
                         </tr>
                     </table>
@@ -38,11 +45,11 @@
                 <div class="palm-row-wrapper">
                     <table class="palm-list-section-label">
                         <tr>
-                            <td >
+                             <td width=85%>
                                 <span class="palm-text-wrapper" x-mojo-loc="">Allow Rotation</span>
                             </td>
-                            <td>
-                                <div id="rotation-toggle" x-mojo-element="ToggleButton" class="toggle-text"></div>
+                             <td width=15%>
+                                <div id="rotation-toggle" x-mojo-element="ToggleButton" class="toggle-text pref-toggle"></div>
                             </td>
                         </tr>
                     </table>
