--- a/trunk/src/app/views/search-menu/search-menu-scene.html
+++ b/trunk/src/app/views/search-menu/search-menu-scene.html
@@ -102,5 +102,8 @@
             </div>
         </div>
     </div>
+    <div class="ampache-version">
+                <span id="search-help" x-mojo-loc=''></span>
+     </div>
 </div>
 
