--- a/trunk/src/stylesheets/main.css
+++ b/trunk/src/stylesheets/main.css
@@ -980,9 +980,8 @@ body.palm-default {
         left: 0px;
         width: 0%;
         height: 50px;
-        margin-top: 0px;
         display: inline-block;
-        float: left;
+        /*float: left;*/
         background-color: #181818;
         z-index: -2;
         opacity:0.6;
@@ -1010,7 +1009,7 @@ body.palm-default {
         margin-top:10px;
         width:100%;
         text-align:center;
-        font-size:9px;
+        font-size:11px;
         color:white;
 }
 
