* New Feature: Tap and Hold Recent to bring up all the songs added in the most recent scan

--- a/src/app/views/mainmenu/listitem.html
+++ b/src/app/views/mainmenu/listitem.html
@@ -1,4 +1,4 @@
-<div class="palm-row multi-line" id='#{name}_example' x-Mojo-tap-highlight="momentary">
+<div class="palm-row multi-line" id='row_#{index}_main' x-Mojo-tap-highlight="momentary">
     <div class="palm-row-wrapper">
         <div class="mainMenuLeft">
             <div class="mainMenuTitle">
